Fix unrelated layout bug previously introduced in weekfeed

--- a/main/src/scss/opintoni/_week-feed.scss
+++ b/main/src/scss/opintoni/_week-feed.scss
@@ -378,6 +378,10 @@ $tablist-single-row: min-width 28.75em;
   margin-top: 3em;
 }
 
+.week-feed-calendar {
+  margin-top: 1em;
+}
+
 .week-feed-calendar__full-screen-button {
   position: absolute;
   top: 0px;
